<resources>
    <string name="app_name">MAD Assigement</string>
    <string name="name">login to your Account</string>
    <string name="Password">Password</string>
    <string name="Signin">Sign in</string>
    <string name="Add_A_package">Add A package</string>
    <string name="BackArrow">BackArrow</string>
    <string name="select_package_type">Select Package Type</string>
    <string name="add_icon">Add icon</string>
    <string name="add_an_icon">Add An Icon</string>
    <string name="write_a_discription">Write A Discription</string>
    <string name="add_discription">add discription</string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="Name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="package_details">Package Details</string>
    <string name="Package_name">Gold</string>
    <string name="Stays_details">Popular amenities</string>
    <string name="Facility01">Pet friendly</string>
    <string name="Facility02">Free WiFi</string>
    <string name="Facility03">Pool</string>
    <string name="Facility04">Bar</string>
    <string name="see_more"><![CDATA[See More >]]></string>
    <string name="add_package">Add package</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="click_me">Click Me</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="forwardarrow">ForwardArrow3</string>
    <string name="logout">Log out</string>
    <string name="select_package">Select package</string>
    <string name="Adding_package_details">Adding Package Details</string>
    <string name="Credit_Card_Number">4135 XXXX XXXX XXXX</string>
    <string name="Date">Date</string>
    <string name="Date_No">07/23</string>
    <string name="payment_method">Payment method</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="Cvv_NO">688</string>
    <string name="Home">Home</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="update_hotel_details">Update Hotel Details</string>
    <string name="Rating_no">8.9</string>
    <string name="ratings">Ratings</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotels">Hotels</string>
    <string name="vehicle">vehicle</string>
    <string name="tour_guids">Tour Guids</string>
    <string name="packages">Packages</string>
    <string name="Hratings">Ratings</string>
    <string name="hotel_details">Hotel Details</string>
    <string name="package01">Packages</string>
    <string name="packageTypes">Packages</string>
    <string name="pemail">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="profile_name">Profile</string>

</resources>