<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resturant_details_Eddit">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="@dimen/Tittle_bar_width"
        android:layout_height="@dimen/Tittle_bar_height"
        android:background="@color/purple_500"
        android:text="@string/update_hotel_details"
        android:textAlignment="center"
        android:textSize="@dimen/APD_textize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/EBackarrow6"
        android:layout_width="@dimen/BackArrow_width"
        android:layout_height="@dimen/BackArrow_height"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="@string/BackArrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107"
        app:srcCompat="@drawable/icons8_add_image_96" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="@dimen/Hotel_Name_width"
        android:layout_height="@dimen/Hotel_Name_height"
        android:text="@string/hotel_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="@dimen/Hotel_Name_box_width"
        android:layout_height="@dimen/Hotel_Name_box_height"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="@dimen/Hotel_Name_width"
        android:layout_height="@dimen/Hotel_Name_height"
        android:text="@string/ratings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="@dimen/Hotel_Name_box_width"
        android:layout_height="@dimen/Hotel_Name_box_height"
        android:ems="10"
        android:hint="@string/Rating_no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="@dimen/Spiner_width"
        android:layout_height="@dimen/Spiner_height"
        android:contentDescription="@string/select_package_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="@dimen/Spiner_text_width"
        android:layout_height="@dimen/Spiner_text_height"
        android:text="@string/select_package_type"
        app:layout_constraintBottom_toBottomOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="@+id/spinner2"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="@+id/spinner2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintVertical_bias="0.617" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/StartupClickme_width"
        android:layout_height="@dimen/StartupClickme_height"
        android:text="@string/Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/StartupClickme_width"
        android:layout_height="@dimen/StartupClickme_height"
        android:text="@string/Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

</androidx.constraintlayout.widget.ConstraintLayout>